Move launch function to own function